--- a/edge_detecting.ipynb
+++ b/edge_detecting.ipynb
@@ -2,24 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "5ad775e4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import cv2\n",
     "import numpy as numpy\n",
-    "from matplotlib import pyplot as plt"
+    "import sys\n",
+    "from matplotlib import pyplot as plt\n",
+    "from PIL import Image, UnidentifiedImageError"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c944a32e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'example\\sample_1.png' が正常に読み込みました\n"
+     ]
+    }
+   ],
+   "source": [
+    "relative_dir = \"example\"\n",
+    "filename = input(f\"'{relative_dir}'フォルダ内の画像ファイル名を入力してください: \")\n",
+    "\n",
+    "if not filename:\n",
+    "    print(\"エラー: ファイル名が入力されていません\")\n",
+    "    sys.exit(1)\n",
+    "\n",
+    "full_relative_path = os.path.join(relative_dir, filename)\n",
+    "\n",
+    "try:\n",
+    "    img = cv2.imread(full_relative_path)\n",
+    "    print(f\"'{full_relative_path}' が正常に読み込みました\")\n",
+    "\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"エラー: ファイル '{full_relative_path}' が見つかりません。\")\n",
+    "except UnidentifiedImageError:\n",
+    "    print(f\"エラー: '{full_relative_path}' は画像ファイルとして認識できません。\")\n",
+    "except Exception as e:\n",
+    "    print(f\"予期せぬエラーが発生しました: {e}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8228fcc3",
+   "id": "1bebb944",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "subplot() takes 1 or 3 positional arguments but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m laplacian \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mLaplacian(img,cv2\u001b[38;5;241m.\u001b[39mCV_64F)\n\u001b[1;32m----> 3\u001b[0m \u001b[43mplt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mSubplot\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m, plt\u001b[38;5;241m.\u001b[39mimshow(img)\n\u001b[0;32m      4\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOriginal\u001b[39m\u001b[38;5;124m'\u001b[39m), plt\u001b[38;5;241m.\u001b[39mxticks([]), plt\u001b[38;5;241m.\u001b[39myticks([])\n\u001b[0;32m      5\u001b[0m plt\u001b[38;5;241m.\u001b[39mSubplot(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m), plt\u001b[38;5;241m.\u001b[39mimshow(laplacian)\n",
+      "File \u001b[1;32mc:\\Users\\zate1\\anaconda3\\envs\\TranSalNet\\lib\\site-packages\\matplotlib\\axes\\_base.py:692\u001b[0m, in \u001b[0;36m_AxesBase.__init__\u001b[1;34m(self, fig, facecolor, frameon, sharex, sharey, label, xscale, yscale, box_aspect, forward_navigation_events, *args, **kwargs)\u001b[0m\n\u001b[0;32m    690\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    691\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_position \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_originalPosition \u001b[38;5;241m=\u001b[39m mtransforms\u001b[38;5;241m.\u001b[39mBbox\u001b[38;5;241m.\u001b[39munit()\n\u001b[1;32m--> 692\u001b[0m     subplotspec \u001b[38;5;241m=\u001b[39m \u001b[43mSubplotSpec\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_from_subplot_args\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfig\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    693\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_position\u001b[38;5;241m.\u001b[39mwidth \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_position\u001b[38;5;241m.\u001b[39mheight \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m    694\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWidth and height specified must be non-negative\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\zate1\\anaconda3\\envs\\TranSalNet\\lib\\site-packages\\matplotlib\\gridspec.py:576\u001b[0m, in \u001b[0;36mSubplotSpec._from_subplot_args\u001b[1;34m(figure, args)\u001b[0m\n\u001b[0;32m    574\u001b[0m     rows, cols, num \u001b[38;5;241m=\u001b[39m args\n\u001b[0;32m    575\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 576\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m _api\u001b[38;5;241m.\u001b[39mnargs_error(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msubplot\u001b[39m\u001b[38;5;124m\"\u001b[39m, takes\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1 or 3\u001b[39m\u001b[38;5;124m\"\u001b[39m, given\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlen\u001b[39m(args))\n\u001b[0;32m    578\u001b[0m gs \u001b[38;5;241m=\u001b[39m GridSpec\u001b[38;5;241m.\u001b[39m_check_gridspec_exists(figure, rows, cols)\n\u001b[0;32m    579\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m gs \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[1;31mTypeError\u001b[0m: subplot() takes 1 or 3 positional arguments but 2 were given"
+     ]
+    }
+   ],
    "source": [
-    "img = cv2.imread"
+    "laplacian = cv2.Laplacian(img,cv2.CV_64F)\n",
+    "\n",
+    "plt.subplot(2,1,1), plt.imshow(img)\n",
+    "plt.title('Original'), plt.xticks([]), plt.yticks([])\n",
+    "plt.subplot(2,1,2), plt.imshow(laplacian)\n",
+    "plt.title('Laplacian'), plt.xticks([]), plt.yticks([])\n",
+    "\n",
+    "plt.show()"
    ]
   }
  ],
